--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "tsc",
     "build-watch": "tsc -w",
+    "pkg": "pkg -o chatone.exe -t node18-win index.js & pkg -o chatone -t node18-mac index.js",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,6 +17,7 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
-    "openai": "^3.2.1"
+    "openai": "^3.2.1",
+    "pkg": "^5.8.1"
   }
 }
