--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --base-href \"https://logione.github.io/chatone/\"",
+    "publish": "npm run build ; angular-cli-ghpages --dir=dist/chatone",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -32,6 +33,7 @@
     "@angular/compiler-cli": "^15.2.0",
     "@angular/localize": "^15.2.0",
     "@types/jasmine": "~4.3.0",
+    "angular-cli-ghpages": "^1.0.5",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
