--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --base-href \"https://logione.github.io/chatone/\"",
-    "publish": "npm run build ; angular-cli-ghpages --dir=dist/chatone",
+    "deploy": "ng deploy --base-href=/chatone/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
