--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "start": "ng serve",
     "build": "ng build --base-href \"https://logione.github.io/chatone/\"",
     "deploy": "ng deploy --base-href=/chatone/",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "watch": "ng build --watch --configuration development"
   },
   "private": true,
   "dependencies": {
@@ -32,14 +31,7 @@
     "@angular/cli": "~17.3.0",
     "@angular/compiler-cli": "^17.3.0",
     "@angular/localize": "^17.3.0",
-    "@types/jasmine": "~4.3.0",
     "angular-cli-ghpages": "^1.0.5",
-    "jasmine-core": "~4.5.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0",
     "typescript": "~5.4.2"
   }
 }
